<resources>


    <string name="app_name">Share House</string>

    #Login Screen
    <string name="login_title">Share House</string>
    <string name="login_name">Username</string>
    <string name="login_password">Password</string>
    <string name="checkboxtext">save username and password</string>
    <string name="login_button">LOGIN</string>
    <string name="newuser_button">REGISTER</string>
    <string name="forgotpassword_link"><u>Forgot your password?</u></string>


    #Register Screen
    <string name="title_activity_register">Share House</string>
    <string name="register_title">Register</string>
    <string name="register_username">Username</string>
    <string name="register_firstname">First Name</string>
    <string name="register_lastname">Last Name</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="register_button">REGISTER</string>


    #Home Activity
    <string name="title_activity_home">HomeActivity</string>
    <string name="editprofile">Edit Profile</string>
    <string name="title_activity_forgot_password">ForgotPassword</string>

    #Forgot Password
    <string name="forgotpassword_title">Forgot Password</string>
    <string name="forgotpassword_email">Enter username/email</string>
    <string name="fp_reset">RESET PASSWORD</string>
    <string name="fp_inst">New password be e-mailed to your account.</string>
    <string name="title_activity_view_house">ViewHouse</string>
    <string name="title_activity_change_password">ChangePassword</string>

    <string name="changepassword_title">Change Password</string>
    <string name="currentpass_title">Current Password</string>
    <string name="newpass_title">New Password</string>
    <string name="confirmnewpass_title">Confirm New Password</string>
    <string name="changepassword_button">SUBMIT</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_dash_board">DashBoard</string>
    <string name="title_activity_about">About</string>

    <string name="about_title">About us</string>
    <string name="about_content">\u2022 ShareHouse app is developed to help resolved shared house conflicts based on sharing the house on time slots.
        \n\n \u2022 Week slots can picked on first come basis and cannot be cancelled one week before the week starts.
        \n\n \u2022 If selected week exceeds the max week assigned by admin then a payment is updated for each week.
        \n\n \u2022 The App is in development stage and any suggestions are welcome. Please email at sharehouseapp@gmail.com.
        \n\n \u2022 This App was developed as part of class project. Special thanks to Dr.Elizabeth Diaz.</string>

    <string name="title_activity_test">test</string>
    <string name="editProfileButton">SAVE</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_edit_house">EditHouse</string>
    <string name="title_activity_admin_house_list">AdminHouseList</string>


</resources>
