<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePassword">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/app_toolbar"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/home_icon"
            android:layout_width="45dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/app_toolbar"
            android:scaleType="fitCenter"
            android:src="@drawable/home_icon"
            android:visibility="visible" />


        <TextView
            android:id="@+id/app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/home_icon"
            android:text="@string/app_name"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold" />
    </RelativeLayout>


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="1000dp"

        android:background="@color/app_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TextView

            android:id="@+id/about_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/changepassword_title"
            android:textColor="@color/app_text"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/currentpass_title"
            android:layout_width="197dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/currentpass_title"
            android:textColor="@color/app_text"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/about_title" />

        <EditText
            android:id="@+id/oldPass"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:background="@color/edit_text"
            android:ems="10"
            android:inputType="textPassword"
            android:paddingLeft="5dp"
            android:textColor="@color/app_text"
            app:layout_constraintStart_toStartOf="@+id/currentpass_title"
            app:layout_constraintTop_toBottomOf="@+id/currentpass_title" />


        <TextView
            android:id="@+id/newpass_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/newpass_title"
            android:textColor="@color/app_text"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/oldPass"
            app:layout_constraintTop_toBottomOf="@+id/oldPass" />

        <EditText
            android:id="@+id/newPass"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:background="@color/edit_text"
            android:ems="10"
            android:inputType="textPassword"
            android:paddingLeft="5dp"
            android:textColor="@color/app_text"
            app:layout_constraintStart_toStartOf="@+id/newpass_title"
            app:layout_constraintTop_toBottomOf="@+id/newpass_title" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/confirmnewpass_title"
            android:textColor="@color/app_text"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/newPass"
            app:layout_constraintTop_toBottomOf="@+id/newPass" />

        <EditText
            android:id="@+id/confirmPass"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:background="@color/edit_text"
            android:ems="10"
            android:inputType="textPassword"
            android:paddingLeft="5dp"
            android:textColor="@color/app_text"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <Button
            android:id="@+id/changepass_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:background="@color/app_text"
            android:text="@string/changepassword_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirmPass" />

    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>