<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    tools:layout_editor_absoluteY="25dp">


    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@color/app_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/app_smallicon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            app:srcCompat="@drawable/small_logo" />

        <TextView
            android:id="@+id/app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/app_smallicon"
            android:text="@string/title_activity_register"
            android:textColor="#FFFFFF"
            android:textSize="30dp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/start_background"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="1.0">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/register_form"
            android:layout_width="match_parent"
            android:layout_height="1500sp"
            tools:layout_editor_absoluteX="257dp"
            tools:layout_editor_absoluteY="366dp">

            <TextView
                android:id="@+id/register_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/register_title"
                android:textColor="@color/start_text"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.032"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/register_firstname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:text="@string/register_firstname"
                android:textColor="@color/start_text"
                android:textSize="25dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register_title" />

            <TextView
                android:id="@+id/register_lastname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="24dp"
                android:text="@string/register_lastname"
                android:textColor="@color/start_text"
                android:textSize="25dp"
                app:layout_constraintEnd_toEndOf="@+id/register_firstname"
                app:layout_constraintTop_toBottomOf="@+id/register_firstname" />


            <TextView
                android:id="@+id/register_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="24dp"
                android:text="@string/register_email"
                android:textColor="@color/start_text"
                android:textSize="25dp"
                app:layout_constraintEnd_toEndOf="@+id/register_lastname"
                app:layout_constraintTop_toBottomOf="@+id/register_lastname" />

            <TextView
                android:id="@+id/register_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="20dp"
                android:text="@string/register_username"
                android:textColor="@color/start_text"
                android:textSize="25dp"
                app:layout_constraintEnd_toEndOf="@+id/register_email"
                app:layout_constraintTop_toBottomOf="@+id/register_email" />

            <TextView
                android:id="@+id/register_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="20dp"
                android:text="@string/register_password"
                android:textColor="@color/start_text"
                android:textSize="25dp"
                app:layout_constraintEnd_toEndOf="@+id/register_username"
                app:layout_constraintTop_toBottomOf="@+id/register_username" />

            <EditText
                android:id="@+id/input_firstname"
                android:layout_width="210dp"
                android:layout_height="35dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:background="#FFFFFF"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="#000000"
                app:layout_constraintStart_toEndOf="@+id/register_firstname"
                app:layout_constraintTop_toBottomOf="@+id/register_title" />

            <EditText
                android:id="@+id/input_lastname"
                android:layout_width="210dp"
                android:layout_height="35dp"
                android:layout_marginTop="20dp"
                android:background="#FFFFFF"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="#000000"
                app:layout_constraintStart_toStartOf="@+id/input_firstname"
                app:layout_constraintTop_toBottomOf="@+id/input_firstname" />

            <EditText
                android:id="@+id/input_email"
                android:layout_width="210dp"
                android:layout_height="35dp"
                android:layout_marginTop="24dp"
                android:background="#FFFFFF"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:textColor="#000000"
                app:layout_constraintStart_toStartOf="@+id/input_lastname"
                app:layout_constraintTop_toBottomOf="@+id/input_lastname" />

            <EditText
                android:id="@+id/input_username"
                android:layout_width="210dp"
                android:layout_height="35dp"
                android:layout_marginTop="20dp"
                android:background="#FFFFFF"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="#000000"
                app:layout_constraintStart_toStartOf="@+id/input_email"
                app:layout_constraintTop_toBottomOf="@+id/input_email" />

            <EditText
                android:id="@+id/input_password"
                android:layout_width="210dp"
                android:layout_height="35dp"
                android:layout_marginTop="20dp"
                android:background="#FFFFFF"
                android:ems="10"
                android:inputType="textPassword"
                android:textColor="#000000"
                app:layout_constraintStart_toStartOf="@+id/input_username"
                app:layout_constraintTop_toBottomOf="@+id/input_username" />

            <Button
                android:id="@+id/register_button"
                android:layout_width="140dp"
                android:layout_height="50dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="36dp"
                android:text="@string/register_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register_password" />


        </android.support.constraint.ConstraintLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>